# material-palette-generator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
material_palette_generator/: __init__.py  cli.py
