[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "material-palettes-generator"
version = "1.3.0"
description = "Generate Material Design color palettes in Python"
authors = [{name = "Black Steel", email = "unknown.user2135@proton.me"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = []
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.scripts]
mpg = "material_palette_generator.cli:main"
